# dizical

./: DEVELOPMENT_PLAN.md  README.md  STATUS.md  pyproject.toml  requirements.txt  setup.py  vibe coding log.md
dizical.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: 使用指南.md
src/: __init__.py  cli.py  config.py  database.py  holiday.py  lesson_manager.py  models.py  notifier.py  obsidian.py  payment.py  practice.py  practice_config.py  practice_query.py  reminders.py  report_templates.py
tests/: test_lesson.py  test_payment.py
