[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dizical"
version = "0.1.0"
authors = [
  { name="mtt", email="mtt@example.com" }
]
description = "dizi + cal = dizical (笛卡尔) 竹笛课程管理助手"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "chinese-calendar>=1.8.0",
  "python-dateutil>=2.8.2",
  "python-dotenv>=1.0.0",
]

[project.scripts]
dizical = "src.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
